# nightly-agent-lab

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: nightly-task.md
.github/workflows/: ci.yml  claude-nightly.yml
docs/: bedrock-github-actions-setup.md  nightly-operation.md
examples/tasks/: 001-small-refactor.md
src/nightly_agent_lab/: __init__.py  cli.py  issue_template.py  report.py
tests/: test_cli.py  test_issue_template.py  test_report.py
